clamp 1 line in Quotes List This allows dialogues to be more readable in details

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -339,7 +339,7 @@
             }
 
             &.quote_list dd {
-                @apply lg:font-normal;
+                @apply lg:font-normal line-clamp-1;
             }
         }
     }
