Place post image after the first line If post is outdated, place after the Outdated admonition

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -291,6 +291,10 @@
 
         & img {
             @apply my-0 inline-block;
+
+            &:is(:first-of-type) {
+                @apply mb-2;
+            }
         }
 
         .highlight {
