--- a/khoBlog/templates/tailwind/cards.html
+++ b/khoBlog/templates/tailwind/cards.html
@@ -62,7 +62,7 @@
     </p>
   </section>
   <section class="mt-3">
-    <a href="{{ object.get_absolute_url }}" class="text-base font-semibold text-cornflower-600 hover:text-cornflower-400 dark:text-cornflower-200 dark:hover:text-cornflower-400">
+    <a href="{{ object.get_absolute_url }}" class="text-base font-semibold text-cornflower-600 hover:underline dark:text-cornflower-200">
       Read more about this {% if object|to_class_name != "customtag" %}{{ object|to_class_name }}{% else %}tag{% endif %}
     </a>
   </section>
