--- a/khoBlog/templates/tailwind/changelog.html
+++ b/khoBlog/templates/tailwind/changelog.html
@@ -8,15 +8,11 @@
           <span class="absolute top-5 left-5 -ml-px h-full w-0.5 bg-gray-200 dark:bg-jumbo-700" aria-hidden="true"></span>
           <div class="relative flex items-start space-x-3">
             <div>
-              <div class="relative px-1">
-                <div class="h-8 w-8 bg-gray-200 dark:bg-jumbo-700 rounded-full ring-8 ring-white dark:ring-jumbo-800 flex items-center justify-center">
-                  <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                    <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd" />
-                  </svg>
-                </div>
+              <div class="relative pl-3 pr-1">
+                <div class="h-4 w-4 bg-gray-200 dark:bg-jumbo-700 rounded-full ring-8 ring-gray-50 dark:ring-jumbo-800 flex items-center justify-center"></div>
               </div>
             </div>
-            <div class="min-w-0 flex-1 py-1.5">
+            <div class="min-w-0 flex-1 pb-1.5">
               <div class="text-sm">
                 <div class="whitespace-nowrap">{{ object.pub_date|naturaltime }}</div>
                 <div class="truncate">
@@ -27,7 +23,7 @@
                 </div>
                 {% if forloop.last %}
                   <div class="relative">
-                    <a class="absolute top-6 text-xs text-cornflower-600 hover:text-cornflower-400 dark:text-cornflower-200 dark:hover:text-cornflower-400" href="{% url 'blog:post_category_list' slug='updates' %}">
+                    <a class="absolute top-6 text-xs text-cornflower-600 hover:underline dark:text-cornflower-200" href="{% url 'blog:post_category_list' slug='updates' %}">
                       Read changelog
                       <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
