allow scroll in Changelog

--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -126,7 +126,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="relative mt-6 flex-1 px-4 sm:px-6">
+                                  <div class="relative mt-6 flex-1 px-4 sm:px-6 overflow-y-auto">
                                     {% changelog %}
                                   </div>
                                 </div>
