Scrollbar in changelog

--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -127,7 +127,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="relative mt-6 flex-1 px-4 sm:px-6 overflow-y-auto">
+                                  <div class="relative mt-6 flex-1 px-4 sm:px-6 overflow-y-auto scrollbar-thin scrollbar-thumb-jumbo-200 scrollbar-track-jumbo-1000 dark:scrollbar-thumb-jumbo-700 dark:scrollbar-track-jumbo-600">
                                     {% changelog %}
                                   </div>
                                 </div>
