--- a/khoBlog/templates/tailwind/post_aside.html
+++ b/khoBlog/templates/tailwind/post_aside.html
@@ -1,6 +1,6 @@
 {% load read_time comments %}
 
-<h2 class="sr-only">Details</h2>
+<div class="sr-only">Details</div>
 <article class="space-y-5">
   <section class="flex items-center space-x-2">
     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400 dark:text-jumbo-100" viewbox="0 0 20 20" fill="currentColor">
@@ -55,6 +55,12 @@
         {{ object.mod_date|date:"Y\-m\-d \a\t H:i:s" }}
       </time>
     </a>
+  </section>
+  <section class="flex items-center space-x-2">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5 text-gray-400 dark:text-jumbo-100">
+      <path d="M13 4.5a2.5 2.5 0 11.702 1.737L6.97 9.604a2.518 2.518 0 010 .792l6.733 3.367a2.5 2.5 0 11-.671 1.341l-6.733-3.367a2.5 2.5 0 110-3.475l6.733-3.366A2.52 2.52 0 0113 4.5z" />
+    </svg>
+    <span class="text-sm font-medium">{{ object.short_code }}</span>
   </section>
   <section class="flex items-center space-x-2">
     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400 dark:text-jumbo-100" viewbox="0 0 20 20" fill="currentColor">
