--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -82,6 +82,9 @@
 
     <meta name="theme-color" content="#B362FF">
     <link type="application/json+oembed" href="https://www.khodok.com/static/khoBlog/js/oembed/oembed.json" title="oEmbed Profile: JSON">
+    {% if has_rss %}
+      <link rel="alternate" hreflang="en" type="application/rss+xml" title="{{ title }}" href="/latest/rss">
+    {% endif %}
 
     {% block additional_js %}{% endblock additional_js %}
     {% block additional_css %}{% endblock additional_css %}
