Fixed a permission bug in pages now redirects to login instead removed all use of h tags in html to respect semantics Updated reqs

--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -2,10 +2,10 @@
 {% load widget_tweaks project_tags %}
 
 {% block content %}
-  <h3>Delete:
+  <div class="text-xl">Delete:
     {{ post.id }}
     -
-    {{ post.title }}</h3>
+    {{ post.title }}</div>
   <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {% form form %}
