--- a/khoBlog/templates/account/edit_profile.html
+++ b/khoBlog/templates/account/edit_profile.html
@@ -22,11 +22,11 @@
       </div>
 
       <div id="profile-fields">
-        <div class="mb-0 text-xl">Basic profile</div>
+        <div class="text-2xl">Basic profile</div>
         <p class="text-sm">Some basic profile data</p>
 
         <div id="visible-profile-fields">
-          <h5>These fields are shown on your Profile page</h5>
+          <div class="text-xl">These fields are shown on your Profile page</div>
 
           <div class="field mb-2">
             <div class="form-floating">
@@ -118,7 +118,7 @@
       </div>
 
       <div id="advanced-fields">
-        <h4 class="mb-0">More advanced Profile Fields</h4>
+        <div class="text-xl">More advanced Profile Fields</div>
         <p class="text-sm">These fields aren't meant to be changed at first. You can change them here, and changing them won't break anything, but make sure to know what each field is before changing it</p>
         <section class="row mb-2 gap-2">
           <div class="input-group col-auto">
@@ -135,7 +135,7 @@
       </div>
 
       <div id="customization-fields">
-        <div class="mb-0 text-xl">Customization</div>
+        <div class="text-xl">Customization</div>
         <p class="text-sm">Some fields that change the design of the website, some of the texts on it, only affects you</p>
         <div class="field mb-2">
           <div class="form-floating">
