--- a/khoBlog/templates/tailwind/menu_flyout.html
+++ b/khoBlog/templates/tailwind/menu_flyout.html
@@ -14,7 +14,7 @@
         <div>
           <h3 class="text-sm font-medium tracking-wide text-gray-500 dark:text-jumbo-300 uppercase">
             Read content
-          </h3>
+          </div>
           <ul role="list" class="mt-5 space-y-6">
             {% links_menu urls "desktop" %}
           </ul>
@@ -22,7 +22,7 @@
         <div>
           <h3 class="text-sm font-medium tracking-wide text-gray-500 dark:text-jumbo-300 uppercase">
             Featured Posts
-          </h3>
+          </div>
           <ul role="list" class="mt-5 space-y-6">
             {% featured_post_list urls %}
           </ul>
@@ -33,7 +33,7 @@
         <div>
           <h3 class="text-sm font-medium tracking-wide text-gray-500 dark:text-jumbo-300 uppercase">
             The best content!
-          </h3>
+          </div>
           <ul role="list" class="mt-6 space-y-6">
             {% super_featured_post_list objects %}
             {% super_featured_page_list objects %}
