--- a/todo/templates/todo/create_task.html
+++ b/todo/templates/todo/create_task.html
@@ -8,7 +8,7 @@
     <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
       <div>
         <div>
-          <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-jumbo-400">{{ title }}</h3>
+          <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-jumbo-400">{{ title }}</div>
         </div>
         <div class="mt-6 sm:mt-5 space-y-6 sm:space-y-5">
           <div class="sm:grid sm:grid-cols-3 sm:gap-4 sm:items-start sm:border-t sm:border-gray-200 sm:pt-5">
