--- a/khoBlog/templates/authentication/includes/signup_form.html
+++ b/khoBlog/templates/authentication/includes/signup_form.html
@@ -5,7 +5,7 @@
     <img class="mx-auto h-12 w-auto" src="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}" width="3rem" alt="RuthinkkTooBig" loading="lazy">
     <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900 dark:text-jumbo-300">
       Sign up for an account
-    </h2>
+    </div>
     <p class="mt-2 text-center text-sm text-gray-600 dark:text-jumbo-200">
       Already have an account?
       <a href="{% url 'account_login' %}{% if next %}?next={{ next }}{% endif %}" rel="nofollow" class="font-medium text-cornflower-600 dark:text-jumbo-200 hover:underline">Log in</a>
