OOPS (Changed some HTML bug forgot to change the related tag)

--- a/khoBlog/templates/tailwind/menu_flyout.html
+++ b/khoBlog/templates/tailwind/menu_flyout.html
@@ -12,7 +12,7 @@
     <div class="relative max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-2">
       <nav class="grid gap-y-10 px-4 py-8 bg-gray-50 dark:bg-jumbo-900 sm:grid-cols-2 sm:gap-x-8 sm:py-12 sm:px-6 lg:px-8 xl:pr-12">
         <div>
-          <h3 class="text-sm font-medium tracking-wide text-gray-500 dark:text-jumbo-300 uppercase">
+          <div class="text-sm font-medium tracking-wide text-gray-500 dark:text-jumbo-300 uppercase">
             Read content
           </div>
           <ul role="list" class="mt-5 space-y-6">
@@ -20,7 +20,7 @@
           </ul>
         </div>
         <div>
-          <h3 class="text-sm font-medium tracking-wide text-gray-500 dark:text-jumbo-300 uppercase">
+          <div class="text-sm font-medium tracking-wide text-gray-500 dark:text-jumbo-300 uppercase">
             Featured Posts
           </div>
           <ul role="list" class="mt-5 space-y-6">
@@ -31,7 +31,7 @@
 
       <div class="bg-gray-50 dark:bg-jumbo-900 px-4 py-8 sm:py-12 sm:px-6 lg:px-8 xl:pl-12">
         <div>
-          <h3 class="text-sm font-medium tracking-wide text-gray-500 dark:text-jumbo-300 uppercase">
+          <div class="text-sm font-medium tracking-wide text-gray-500 dark:text-jumbo-300 uppercase">
             The best content!
           </div>
           <ul role="list" class="mt-6 space-y-6">
