--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -4,7 +4,7 @@
   <div class="mx-auto max-w-7xl">
     <div class="sm:flex sm:items-center">
       <div class="sm:flex-auto">
-        <h1 class="text-xl font-semibold text-gray-900 dark:text-jumbo-100">Tasks</div>
+        <div class="text-xl font-semibold text-gray-900 dark:text-jumbo-100">Tasks</div>
         <p class="mt-2 text-sm text-gray-700 dark:text-jumbo-50">A list of all the things to do.</p>
       </div>
       {% if user.is_superuser %}
