--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -50,7 +50,7 @@
       </nav>
       <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:border-gray-200 dark:xl:border-jumbo-200 xl:pb-6">
         <div>
-          <h1 class="text-2xl font-bold text-gray-900 dark:text-jumbo-50">{{ object.title }}</div>
+          <div class="text-2xl font-bold text-gray-900 dark:text-jumbo-50">{{ object.title }}</div>
           <p class="mt-2 text-sm text-gray-500 dark:text-jumbo-200">
             Post <span class="font-bold">#{{ object.pk }}</span> written by
             <!-- space -->
@@ -70,7 +70,7 @@
         {% sb object user=request.user %}
       </div>
       <div class="py-3 xl:pt-6 xl:pb-0">
-        <h2 class="sr-only">Content</div>
+        <div class="sr-only">Content</div>
         <div class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
           {{ post.body_content|formatted_markdown|safe }}
         </div>
