--- a/khoBlog/templates/authentication/includes/signup_form.html
+++ b/khoBlog/templates/authentication/includes/signup_form.html
@@ -3,7 +3,7 @@
 <div class="min-h-full flex flex-col justify-center py-12 sm:px-6 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
     <img class="mx-auto h-12 w-auto" src="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}" width="3rem" alt="RuthinkkTooBig" loading="lazy">
-    <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900 dark:text-jumbo-300">
+    <div class="mt-6 text-center text-3xl font-extrabold text-gray-900 dark:text-jumbo-300">
       Sign up for an account
     </div>
     <p class="mt-2 text-center text-sm text-gray-600 dark:text-jumbo-200">
