Ruthinkk is a SQUARE NOW!!!

--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -60,8 +60,8 @@
     <link rel="shortlink" href="{{ CANONICAL_PATH }}">
 
     <meta property="og:site_name" content="Hello There!"/>
-    <meta property="og:image" content="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}">
-    <meta property="twitter:image" content="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}">
+    <meta property="og:image" content="{% static 'khoBlog/img/Ruthinkk.webp' %}">
+    <meta property="twitter:image" content="{% static 'khoBlog/img/Ruthinkk.webp' %}">
     <link rel="apple-touch-icon" href="{% static 'khoBlog/img/RuthinkkTooBig-small-square.png' %}"/>
 
     {% block page_head %}
