--- a/khoBlog/templates/authentication/includes/login_form.html
+++ b/khoBlog/templates/authentication/includes/login_form.html
@@ -2,7 +2,7 @@
 
 <div class="min-h-full flex flex-col justify-center py-12 sm:px-6 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
-    <img class="mx-auto h-12 w-auto" src="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}" width="3rem" alt="RuthinkkTooBig" loading="lazy">
+    <img class="mx-auto h-12 w-auto" src="{% static 'khoBlog/img/Ruthinkk.webp' %}" width="3rem" alt="RuthinkkTooBig" loading="lazy">
     <div class="mt-6 text-center text-3xl font-extrabold text-gray-900 dark:text-jumbo-300">
       Log in to your account
     </div>
