--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -68,7 +68,7 @@
               <div class="hidden lg:flex lg:items-center">
                 <a href="{% url 'blog:post_list' %}">
                   <span class="sr-only">Home page</span>
-                  <img class="h-8 w-auto sm:h-10" width="2.5rem" height="2.5rem" src="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}" loading="lazy" alt="Khodok's Logo">
+                  <img class="h-8 w-auto sm:h-10" width="2.5rem" height="2.5rem" src="{% static 'khoBlog/img/Ruthinkk.webp' %}" loading="lazy" alt="Khodok's Logo">
                 </a>
               </div>
 
@@ -95,7 +95,7 @@
               <!-- Logo (lg-) -->
               <a href="{% url 'blog:post_list' %}" class="lg:hidden">
                 <span class="sr-only">Home page</span>
-                <img class="h-8 w-auto sm:h-10" width="2.5rem" height="2.5rem" src="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}" loading="lazy" alt="Khodok's Logo">
+                <img class="h-8 w-auto sm:h-10" width="2.5rem" height="2.5rem" src="{% static 'khoBlog/img/Ruthinkk.webp' %}" loading="lazy" alt="Khodok's Logo">
               </a>
 
               <div class="flex-1 flex items-center justify-end">
