--- a/portfolio/templates/portfolio/create_sub_project.html
+++ b/portfolio/templates/portfolio/create_sub_project.html
@@ -35,21 +35,8 @@
 
     <div class="field mb-2">
       <div class="form-floating">
-        {{ form.snippet|add_class:"form-control"|attr:"placeholder:snippet" }}
-        {{ form.snippet.label_tag }}
-      </div>
-      {% if form.snippet.help_text %}
-        <span class="text-sm">{{ form.snippet.help_text }}</span>
-      {% endif %}
-      {% for error in form.snippet.errors %}
-        <small class="text-flamingo-600">{{ error }}</small>
-      {% endfor %}
-    </div>
-
-    <div class="field mb-2">
-      <div class="form-floating">
-        {{ form.description|add_class:"form-control"|attr:"placeholder:Post description" }}
         {{ form.description.label_tag }}
+        {{ form.description|add_class:"form-control"|attr:"placeholder:Post description" }}
       </div>
       {% if form.description.help_text %}
         <span class="text-sm">{{ form.description.help_text }}</span>
@@ -61,8 +48,21 @@
 
     <div class="field mb-2">
       <div class="form-floating">
-        {{ form.learned|add_class:"form-control"|attr:"placeholder:Learned" }}
+        {{ form.done_in_project.label_tag }}
+        {{ form.done_in_project|add_class:"form-control"|attr:"placeholder:done_in_project" }}
+      </div>
+      {% if form.done_in_project.help_text %}
+        <span class="text-sm">{{ form.done_in_project.help_text }}</span>
+      {% endif %}
+      {% for error in form.done_in_project.errors %}
+        <small class="text-flamingo-600">{{ error }}</small>
+      {% endfor %}
+    </div>
+
+    <div class="field mb-2">
+      <div class="form-floating">
         {{ form.learned.label_tag }}
+        {{ form.learned|add_class:"form-control"|attr:"placeholder:Learned" }}
       </div>
       {% if form.learned.help_text %}
         <span class="text-sm">{{ form.learned.help_text }}</span>
